# LiquidSearcher

./: .gitignore  AGENTS.md  CLAUDE.md  MVP.md  Makefile  PLANNING.md  Processing.ipynb  README.md  README_DATA_PIPELINE.md  analyze_coverage.py  dvc.yaml  pyproject.toml  requirements.txt  sanity_check.py  test_notebook_compat.py
config/: default.yaml
configs/: params.yaml
docs/: FEATURES_SUMMARY.md  PROJECT_STRUCTURE.md  architecture-analysis.md  architecture.md  data-sources.md  implementation-notes.md  training-workflow-guide.md
examples/: compute_features.py
scripts/: inference.py  preprocess_features.py  preprocess_unified.py  shard_by_symbol.py  test_pipeline.py  train.py  train.sh  validate.py
src/: __init__.py
tests/: __init__.py  conftest.py  test_cache_manager.py  test_config.py  test_credentials.py  test_data_credentials.py  test_feature_engineer.py  test_features_base.py  test_features_g1.py  test_features_g2.py  test_features_g3.py  test_features_g4.py  test_features_g5.py  test_features_g6.py  test_features_integration.py  test_features_market_risk.py  test_features_momentum.py  test_features_sector.py  test_features_technical.py  test_features_valuation.py  test_features_volatility.py  test_models_base.py  test_models_dual_encoder.py  test_models_integration.py  test_models_losses.py  test_models_losses_proper.py  test_models_mixer.py  test_models_sampler.py  test_models_tabmixer.py  test_models_tabular_encoder.py  test_models_tcn.py  test_models_temporal_encoder.py  test_normalization.py  test_preprocess_unified.py  test_processor.py  (+12 more)
(+88 files in other folders)
